Part 2/2.03/ping-pong/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  namescape: applications
  name: ping-pong-svc
spec:
  type: ClusterIP
  selector:
    app: ping-pong-app
  ports:
  - protocol: TCP
    port: 2345        # Port exposed internally within the cluster
    targetPort: 3000  # Port the application is listening on
